<resources>
    <string name="app_name">Dolna Rides</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="menu_profile">Profile</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>

    <string name="dummy_name">Abir Hossain Xian</string>
    <string name="dummy_number">01673398900</string>

    <string name="help_howtouse">How To Use App</string>
    <string name="help_privacy_policy">Privacy Policy</string>
    <string name="help_terms">Terms &amp; Condition</string>
    <string name="help_faq">FAQ</string>
    <string name="help_visitus">Visit Our Website</string>
    <string name="help_email">Email</string>
    <string name="help_call_center">Call Center</string>

    <string name="explore_dolna">Explore Dolna</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="maps_api_key">AIzaSyBWe-lmrAYShG_e50U9_W1xHd2msA01DFU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>