<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/group_0">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/group_1">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_emoji_people_24"
            android:title="@string/menu_profile" />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/group_2">
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_about_us" />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/group_3">
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/menu_help" />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/group_4">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/menu_logout" />
    </group>
</menu>