<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.help.HelpFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/grey_light_2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_call_center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:background="@drawable/shape_round"
            android:layout_margin="5dp"
            android:padding="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_email"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:background="@drawable/shape_round"
            android:layout_margin="5dp"
            android:padding="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_visitus"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:background="@drawable/shape_round"
            android:layout_margin="5dp"
            android:padding="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_faq"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:background="@drawable/shape_round"
            android:layout_margin="5dp"
            android:padding="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_terms"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:background="@drawable/shape_round"
            android:layout_margin="5dp"
            android:padding="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_privacy_policy"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:background="@drawable/shape_round"
            android:layout_margin="5dp"
            android:padding="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_howtouse"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:background="@drawable/shape_round"
            android:layout_margin="5dp"
            android:padding="15dp"/>

    </LinearLayout>


</LinearLayout>